--- a/TopAnalysis/data/combineHLT/SMsingleTopDoubleLepton/2016.yaml
+++ b/TopAnalysis/data/combineHLT/SMsingleTopDoubleLepton/2016.yaml
@@ -23,7 +23,7 @@ Run2016BG.DoubleEG: "
      HLT_Ele23_Ele12_CaloIdL_TrackIdL_IsoVL_DZ
 "
 Run2016BG.SingleMuon: "HLT_IsoMu24 || HLT_IsoTkMu24"
-Run2016BG.SingleElectron "HLT_Ele32_eta2p1_WPTight_Gsf"
+Run2016BG.SingleElectron: "HLT_Ele32_eta2p1_WPTight_Gsf"
 
 Run2016H.MuonEG: "
      HLT_Mu23_TrkIsoVVL_Ele12_CaloIdL_TrackIdL_IsoVL_DZ || HLT_Mu12_TrkIsoVVL_Ele23_CaloIdL_TrackIdL_IsoVL_DZ
