synchronize to upstream branch

--- a/TopAnalysis/data/histogramming/fcncTriLepton.yaml
+++ b/TopAnalysis/data/histogramming/fcncTriLepton.yaml
@@ -11,7 +11,7 @@ steps:
               "Lepton1_pt", "Lepton1_eta", "Lepton1_phi",
               "Lepton2_pt", "Lepton2_eta", "Lepton2_phi",
               "Lepton3_pt", "Lepton3_eta", "Lepton3_phi",
-              "nJet", "nBjet", "nJet_nBjet",
+              "nGoodJet", "nBjet", "nGoodJet_nBjet",
               "Z_pt", "Z_mass",]
     - name: "S2"
       cuts: ["CutStep >= 2"]
@@ -20,14 +20,14 @@ steps:
               "Lepton2_pt", "Lepton2_eta", "Lepton2_phi",
               "Lepton3_pt", "Lepton3_eta", "Lepton3_phi",
               "Z_pt", "Z_mass",
-              "nJet", "nBjet", "nJet_nBjet",
+              "nGoodJet", "nBjet", "nGoodJet_nBjet",
               "MET_pt", "MET_phi",]
     - name: "S3"
       cuts: ["CutStep >= 3"]
       hists: ["nPV", "nPV_noWeight",
               "Lepton1_pt", "Lepton2_pt", "Lepton3_pt",
               "Z_pt", "Z_mass",
-              "nJet", "nBjet", "nJet_nBjet",
+              "nGoodJet", "nBjet", "nGoodJet_nBjet",
               "MET_pt", "MET_phi",]
 
 hists:
@@ -142,7 +142,7 @@ hists:
             xmin: -3.1415922
             xmax:  3.1415922
 
-    nJet:
+    nGoodJet:
         title: "nGoodJet;Jet multiplicity;Events"
         bins:
             nbinsX: 20
@@ -157,9 +157,9 @@ hists:
             xmin: 0
             xmax: 20
 
-    nJet_nBjet:
-        title: "nJet vs nBjet;nJet;nBjet;Events"
-        expr: "nBjet:nJet" # y:x
+    nGoodJet_nBjet:
+        title: "nGoodJet vs nBjet;nGoodJet;nBjet;Events"
+        expr: "nBjet:nGoodJet" # y:x
         bins:
             nbinsX: 20
             xmin: 0
