--- a/TopAnalysis/data/grouping/fcncTriLepton.yaml
+++ b/TopAnalysis/data/grouping/fcncTriLepton.yaml
@@ -27,66 +27,56 @@ processes:
             - Run2016.DoubleEG
             - Run2016.SingleElectron
 
-DYJets:
+    DYJets:
         title: "Z/#gamma^{*}+Jets#rightarrow l^{+}l^{-}"
-        weight: "genWeight*puWeight*BtagWeight"
+        weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
+        cut: "HLT"
         datasets:
             - MC2016.DYJetsToLL_M-10to50
             - MC2016.DYJetsToLL_M-50
     WJets:
         title: "W+jets"
-        weight: "genWeight*puWeight*BtagWeight"
+        weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
+        cut: "HLT"
         datasets: [MC2016.WJets]
     SingleTop:
         title: "Single top"
-        weight: "genWeight*puWeight*BtagWeight"
+        weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
+        cut: "HLT"
         datasets:
             - MC2016.ST_s_4f_lepton
             - MC2016.ST_t
             - MC2016.ST_tW
             - MC2016.STbar_t
             - MC2016.STbar_tW
-    fcncLL:
-        title: "t#bar{t}b#bar{b}"
-        weight: "genWeight*puWeight*BtagWeight"
-        datasets: [MC2016.TTTo2L2Nu]
-        #cut: "genTTBBCategory==55"
-    ttccLL:
-        title: "t#bar{t}cc"
-        weight: "genWeight*puWeight*BtagWeight"
-        datasets: [MC2016.TTTo2L2Nu]
-        #cut: "genTTBBCategory==3"
-    ttLFLL:
-        title: "t#bar{t}LF"
-        weight: "genWeight*puWeight*BtagWeight"
-        datasets: [MC2016.TTTo2L2Nu]
-        #cut: "genTTBBCategory==0"
-    TTOther:
-        title: "t#bar{t} others"
-        weight: "genWeight*puWeight*BtagWeight"
-        datasets: [MC2016.TTToSemilepton, MC2016.TTToHadronic]
+    TTJets:
+        title: "TTJets"
+        weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
+        cut: "HLT"
+        datasets: [MC2016.TT_powheg]
     Dibosons:
         title: "Dibosons"
-        weight: "genWeight*puWeight*BtagWeight"
-        datasets: [MC2016.WW, MC2016.WZ, MC2016.ZZ]
-    Tribonsons:
+        weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
+        cut: "HLT"
+        datasets: [MC2016.WWTo2L2Nu, MC2016.WWToLNuQQ, MC2016.WZTo1L1Nu2Q, MC2016.WZTo1L3Nu, MC2016.WZTo2L2Q, MC2016.WZTo3LNu, MC2016.ZZTo2L2Nu, MC2016.ZZTo2L2Q, MC2016.ZZTo4L]
+    Tribosons:
         title: "Tribosons"
-        weight: "genWeight*puWeight*BtagWeight"
+        weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
+        cut: "HLT"
         datasets: [MC2016.WWW, MC2016.WWZ, MC2016.WZZ, MC2016.ZZZ]
 
     SingleTopV:
         title: "SingleTop+V"
-        weight: "genWeight*puWeight*BtagWeight"
+        weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
+        cut: "HLT"
         datasets: [MC2016.tZq_ll]
-    ttbb:
-        title: "t#bar{t}b#bar{b}"
-        weight: "genWeight*puWeight*BtagWeight"
-        datasets: [MC2016.ttbb]
     TTV:
         title: "t#bar{t}+V"
-        weight: "genWeight*puWeight*BtagWeight"
+        weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
+        cut: "HLT"
         datasets: [MC2016.TTWJetsToLNu, MC2016.TTWJetsToQQ, MC2016.TTZToLLNuNu, MC2016.TTZToQQ]
     TTH:
         title: "t#bar{t}+Higgs"
-        weight: "genWeight*puWeight*BtagWeight"
+        weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
+        cut: "HLT"
         datasets: [MC2016.ttHToNonbb, MC2016.ttHTobb]
