--- a/TopAnalysis/data/grouping/fcncTriLepton.yaml
+++ b/TopAnalysis/data/grouping/fcncTriLepton.yaml
@@ -28,19 +28,22 @@ processes:
             - Run2016.SingleElectron
 
     DYJets:
-        title: "Z/#gamma^{*}+Jets#rightarrow l^{+}l^{-}"
+        title: "DYJets"
+        longTitle: "Z/#gamma^{*}+Jets#rightarrow l^{+}l^{-}"
         weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
         cut: "HLT"
         datasets:
             - MC2016.DYJetsToLL_M-10to50
             - MC2016.DYJetsToLL_M-50
     WJets:
-        title: "W+jets"
+        title: "Wjets"
+        longTitle: "W+jets"
         weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
         cut: "HLT"
         datasets: [MC2016.WJets]
     SingleTop:
-        title: "Single top"
+        title: "SingleTop"
+        longTitle: "Single top"
         weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
         cut: "HLT"
         datasets:
@@ -50,7 +53,8 @@ processes:
             - MC2016.STbar_t
             - MC2016.STbar_tW
     TTJets:
-        title: "TTJets"
+        title: "ttJets"
+        longTitle: "t#bar{t} jets"
         weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
         cut: "HLT"
         datasets: [MC2016.TT_powheg]
@@ -66,17 +70,20 @@ processes:
         datasets: [MC2016.WWW, MC2016.WWZ, MC2016.WZZ, MC2016.ZZZ]
 
     SingleTopV:
-        title: "SingleTop+V"
+        title: "SingleTopV"
+        longTitle: "SingleTop+V"
         weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
         cut: "HLT"
         datasets: [MC2016.tZq_ll]
     TTV:
-        title: "t#bar{t}+V"
+        title: "ttV"
+        longTitle: "t#bar{t}+V"
         weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
         cut: "HLT"
         datasets: [MC2016.TTWJetsToLNu, MC2016.TTWJetsToQQ, MC2016.TTZToLLNuNu, MC2016.TTZToQQ]
     TTH:
-        title: "t#bar{t}+Higgs"
+        title: "ttH"
+        longTitle: "t#bar{t}+Higgs"
         weight: "(LHEWeight_originalXWGTUP == 0 ? genWeight : genWeight/LHEWeight_originalXWGTUP)*puWeight*BtagWeight"
         cut: "HLT"
         datasets: [MC2016.ttHToNonbb, MC2016.ttHTobb]
