--- a/TopAnalysis/data/histogramming/fcncTrilepton.yaml
+++ b/TopAnalysis/data/histogramming/fcncTrilepton.yaml
@@ -47,7 +47,7 @@ steps:
               "MET_pt", "MET_phi",]
 
     - name: "WZCR"
-      cuts: ["TMath::Abs(Z_mass-91.2)<7.5", "nGoodJet>=1", "nBjet==0"]
+      cuts: ["TMath::Abs(Z_mass-91.2)<7.5", "nGoodJet>=1", "nGoodJet<=3", "nBjet==0"]
       hists: ["nPV", "nPV_noWeight",
               "Lepton1_pt", "Lepton2_pt", "Lepton3_pt",
               "Z_pt", "Z_mass", "W_MT",
@@ -55,7 +55,7 @@ steps:
               "MET_pt", "MET_phi",]
 
     - name: "STCR"
-      cuts: ["TMath::Abs(Z_mass-91.2)>7.5", "nGoodJet==1", "nBjet==1"]
+      cuts: ["TMath::Abs(Z_mass-91.2)>7.5", "TMath::Abs(Z_mass-91.2)<30", "nGoodJet==1", "nBjet==1"]
       hists: ["nPV", "nPV_noWeight",
               "Lepton1_pt", "Lepton2_pt", "Lepton3_pt",
               "Z_pt", "Z_mass", "W_MT",
@@ -71,7 +71,7 @@ steps:
               "MET_pt", "MET_phi",]
 
     - name: "TTCR"
-      cuts: ["TMath::Abs(Z_mass-91.2)>7.5", "nGoodJet>=2", "nBjet>=1"]
+      cuts: ["TMath::Abs(Z_mass-91.2)>7.5", "TMath::Abs(Z_mass-91.2)<30", "nGoodJet>=2", "nGoodJet<=3", "nBjet>=1"]
       hists: ["nPV", "nPV_noWeight",
               "Lepton1_pt", "Lepton2_pt", "Lepton3_pt",
               "Z_pt", "Z_mass", "W_MT",
@@ -79,7 +79,7 @@ steps:
               "MET_pt", "MET_phi",]
 
     - name: "TTSR"
-      cuts: ["TMath::Abs(Z_mass-91.2)<7.5", "nGoodJet>=2", "nBjet>=1"]
+      cuts: ["TMath::Abs(Z_mass-91.2)<7.5", "nGoodJet>=2", "nGoodJet<=3", "nBjet>=1"]
       hists: ["nPV", "nPV_noWeight",
               "Lepton1_pt", "Lepton2_pt", "Lepton3_pt",
               "Z_pt", "Z_mass", "W_MT",
